some potential performance improvements

--- a/templates/pages/admin/entity/survey_config.html.twig
+++ b/templates/pages/admin/entity/survey_config.html.twig
@@ -57,7 +57,7 @@
 {{ fields.dropdownNumberField('inquest_duration' ~ config_suffix, inquest_duration, __('Duration of survey'), {
     full_width: true,
     min: 1,
-    max: 100,
+    max: constant('Entity::MAX_INQUEST_DURATION_DAYS'),
     unit: 'day',
     toadd: {
         0: __('Unspecified')
