smarter tinymce lib loading

--- a/public/css/tinymce_empty_skin/content.css
+++ b/public/css/tinymce_empty_skin/content.css
@@ -30,3 +30,8 @@
  *
  * ---------------------------------------------------------------------
  */
+
+.mce-content-body[data-mce-placeholder]:not(.mce-visualblocks)::before {
+   content: attr(data-mce-placeholder);
+   position: absolute;
+}
