--- a/templates/components/form/basic_inputs_macros.html.twig
+++ b/templates/components/form/basic_inputs_macros.html.twig
@@ -321,6 +321,7 @@
         'aria_label': "",
         'statusbar': true,
         'content_style': "",
+        'single_line': false,
     }|merge(options) %}
 
     {% if options.fields_template.isMandatoryField(name) %}
@@ -356,33 +357,35 @@
             options.toolbar,
             options.statusbar,
             options.content_style,
+            options.single_line,
         ]) %}
    {% endif %}
-   {% if options.enable_form_tags %}
-        <script>
-            $(function() {
-                const form_tags = new GLPI.RichText.FormTags(
-                    tinymce.get('{{ options.id }}'),
-                    {{ options.form_tags_form_id }},
-                );
-                form_tags.register();
+        <script defer>
+            import('{{ js_path('js/modules/Form/TinyMCEEditor.js') }}').then(() => {
+                {% if options.enable_form_tags %}
+                    import('{{ js_path('js/modules/Forms/FormTags.js') }}').then((m) => {
+                        const form_tags = new m.default(
+                            tinymce.get('{{ options.id }}'),
+                            {{ options.form_tags_form_id }},
+                        );
+                        form_tags.register();
+                    });
+                {% endif %}
+                {% if options.mention_options.enabled and config('use_notifications') %}
+                    import('{{ js_path('js/modules/Form/UserMention.js') }}').then((m) => {
+                        $(function() {
+                            const user_mention = new m.default(
+                                tinymce.get('{{ options.id }}'),
+                                {{ options.entities_id }},
+                                '{{ idor_token('User', {'right': 'all', 'entity_restrict': options.entities_id}) }}',
+                                {{ options.mention_options|json_encode|raw }}
+                            );
+                            user_mention.register();
+                        });
+                    });
+                {% endif %}
             });
         </script>
-    {% endif %}
-
-    {% if options.mention_options.enabled and config('use_notifications') %}
-        <script>
-            $(function() {
-                const user_mention = new GLPI.RichText.UserMention(
-                    tinymce.get('{{ options.id }}'),
-                    {{ options.entities_id }},
-                    '{{ idor_token('User', {'right': 'all', 'entity_restrict': options.entities_id}) }}',
-                    {{ options.mention_options|json_encode|raw }}
-                );
-                user_mention.register();
-            });
-        </script>
-    {% endif %}
 {% endmacro %}
 
 
