feat(forms): Add translation system

--- a/css/includes/_includes.scss
+++ b/css/includes/_includes.scss
@@ -49,6 +49,7 @@ $is-dark: false !default;
 @import "components/form/form-editor";
 @import "components/form/form-renderer";
 @import "components/form/form-destination";
+@import "components/form/form-translations";
 @import "components/fuzzy";
 @import "components/global-menu";
 @import "components/illustration-picker";
