--- a/templates/components/datatable.html.twig
+++ b/templates/components/datatable.html.twig
@@ -72,7 +72,7 @@
                 {% do call('Html::showMassiveActions', [massiveactionparams|default([])]) %}
             </div>
         {% endif %}
-        <table id="{{ datatable_id }}" class="table {{ table_class_style|default('table-hover') }}">
+        <table id="{{ datatable_id }}" class="table {{ table_class_style|default('table-hover') }}" aria-label="{{ datatable_aria_label|default('Data Table') }}">
             <thead>
                 {% if super_header is defined and super_header is not empty %}
                     {% set super_header_label = super_header is array ? super_header['label'] : super_header %}
@@ -219,8 +219,10 @@
                                 </td>
                             {% endif %}
                             {% for colkey, colum in columns %}
-                                <td>
-                                    {% if colkey in entry|keys %}
+                                {% if colkey in entry|keys %}
+                                    {% set colspan = entry[colkey ~ '_colspan']|default(1) %}
+                                    {% set aria_label = entry[colkey ~ '_aria_label']|default('') %}
+                                    <td colspan="{{ colspan }}" aria-label="{{ aria_label }}">
 
                                         {% set formatter = formatters[colkey] %}
 
@@ -283,8 +285,8 @@
                                         {% else %}
                                             {{ entry[colkey] }}
                                         {% endif %}
-                                    {% endif %}
-                                </td>
+                                    </td>
+                                {% endif %}
                             {% endfor %}
                             {% if not nofilter %}
                                 <td></td>
@@ -294,7 +296,7 @@
                 {% else %}
                     <tr>
                         <td colspan="{{ total_cols }}">
-                            <div class="alert alert-info">
+                            <div class="alert alert-info" role="alert">
                                 {{ __('No results found') }}
                             </div>
                         </td>
