--- a/templates/pages/tools/kb/knowbaseitem.html.twig
+++ b/templates/pages/tools/kb/knowbaseitem.html.twig
@@ -68,10 +68,22 @@
         {{ fields.nullField() }}
     {% endif %}
 
-    {{ fields.dropdownYesNo('is_token_url', item.fields['is_token_url'], __('Share with a unique URL')) }}
+    {{ fields.dropdownYesNo(
+        'is_token_url',
+        item.fields['is_token_url'],
+        __('Share with a unique URL'),
+        {
+            'full_width': true
+        })
+    }}
     {% if item.fields['is_token_url'] %}
         {% set token_url = config('url_base') ~ '/front/helpdesk.faq.php?id=' ~ item.fields['id'] ~ '&token=' ~ item.fields['token'] %}
         {{ fields.htmlField('', token_url, __('Unique URL')) }}
+        {{ fields.checkboxField(
+            '_reset_token_url',
+            item.isNewItem() ? 1 : 0,
+            __('Regenerate')
+        ) }}
     {% else %}
         {{ fields.nullField() }}
     {% endif %}
