--- a/css/includes/components/_fileupload.scss
+++ b/css/includes/components/_fileupload.scss
@@ -60,3 +60,24 @@
 .draghover {
     background: #fbf8df;
 }
+
+.form-control[type="file"]::file-selector-button {
+    color: var(--tblr-secondary);
+    background-color: transparent;
+    border-color: var(--tblr-secondary);
+}
+
+.form-control[type="file"]:hover:not(:disabled)::file-selector-button {
+    background-color: var(--tblr-secondary);
+    color: var(--tblr-secondary-fg);
+}
+
+.form-control[type="file"]:active:not(:disabled)::file-selector-button {
+    background-color: var(--tblr-secondary);
+    color: var(--tblr-secondary-fg);
+}
+
+.form-control[type="file"]:disabled::file-selector-button {
+    color: var(--tblr-secondary-fg);
+    border-color: transparent;
+}
