remove important from badge color

--- a/css/includes/_base.scss
+++ b/css/includes/_base.scss
@@ -364,7 +364,7 @@ table {
 
 .badge {
     background: var(--glpi-badge-bg);
-    color: var(--glpi-badge-fg) !important;
+    color: var(--glpi-badge-fg);
 }
 
 .entity_tree {
