--- a/templates/pages/admin/form/conditional_visibility_editor.html.twig
+++ b/templates/pages/admin/form/conditional_visibility_editor.html.twig
@@ -32,15 +32,6 @@
 
 {% set last_condition_is_filled = false %}
 
-{# Load enum values for InputTemplateKey #}
-{% set string_input = enum('Glpi\\Form\\Condition\\InputTemplateKey').STRING %}
-{% set number_input = enum('Glpi\\Form\\Condition\\InputTemplateKey').NUMBER %}
-{% set time_input = enum('Glpi\\Form\\Condition\\InputTemplateKey').TIME %}
-{% set date_input = enum('Glpi\\Form\\Condition\\InputTemplateKey').DATE %}
-{% set datetime_input = enum('Glpi\\Form\\Condition\\InputTemplateKey').DATE_AND_TIME %}
-{% set urgency_input = enum('Glpi\\Form\\Condition\\InputTemplateKey').URGENCY %}
-{% set request_type_input = enum('Glpi\\Form\\Condition\\InputTemplateKey').REQUEST_TYPE %}
-
 {% for condition in defined_conditions %}
     {% set condition_is_filled = condition.getItemUuid() != '' %}
     {% set last_condition_is_filled = loop.last and condition_is_filled %}
@@ -114,61 +105,17 @@
                     </span>
 
                     {# Load the correct template to use #}
-                    {% set template_key = manager.getInputTemplateKeyForCondition(condition) %}
+                    {% set handler = manager.getHandlerForCondition(condition) %}
 
-                    {# Load common values that will be used by all templates #}
-                    {% set condition_input_value = condition.getValue() %}
-                    {% set condition_input_name = "_conditions[" ~ loop.index0 ~ "][value]" %}
-                    {% set condition_input_label = __("Value") %}
-
-                    {% if template_key in [
-                        string_input,
-                        number_input,
-                        time_input,
-                        date_input,
-                        datetime_input,
-                    ] %}
-                        <input
-                            class="me-2 form-control value-selector flex-grow-1"
-                            value="{{ condition_input_value }}"
-                            name="{{ condition_input_name }}"
-                            placeholder="{{ __("Enter a value...") }}"
-                            data-glpi-conditions-editor-value
-                            aria-label="{{ condition_input_label }}"
-                            {% if template_key == number_input %}
-                                type="number"
-                                step="any"
-                            {% elseif template_key == time_input %}
-                                type="time"
-                            {% elseif template_key == date_input %}
-                                type="date"
-                            {% elseif template_key == datetime_input %}
-                                type="datetime-local"
-                            {% endif %}
-                        />
-                    {% elseif template_key in [
-                        urgency_input,
-                        request_type_input,
-                    ] %}
-                        {% if template_key == urgency_input %}
-                            {% set values = enum('Glpi\\Urgency').getUrgencyValuesForDropdown() %}
-                        {% elseif template_key == request_type_input %}
-                            {% set values = call('Ticket::getTypes') %}
-                        {% endif %}
-                        <span class="me-2 value-selector flex-grow-1">
-                            {% do call('Dropdown::showFromArray', [
-                                condition_input_name,
-                                values,
-                                {
-                                    'value': condition_input_value,
-                                    'aria_label': condition_input_label,
-                                    'add_data_attributes': {
-                                        'glpi-conditions-editor-value': '',
-                                    },
-                                }
-                            ]) %}
-                        </span>
-                    {% endif %}
+                    {{ include(
+                        handler.getTemplate(),
+                        {
+                            input_value: condition.getValue(),
+                            input_name: "_conditions[" ~ loop.index0 ~ "][value]",
+                            input_label: __("Value"),
+                        }|merge(handler.getTemplateParameters()),
+                        with_context = false
+                    ) }}
                 {% endif %}
 
                 {% if condition_is_filled or loop.index0 > 0 %}
