--- a/templates/components/itilobject/timeline/knowledge_item.html.twig
+++ b/templates/components/itilobject/timeline/knowledge_item.html.twig
@@ -39,8 +39,7 @@
     <i class="ti ti-search"></i>
     </button>
 {% endset %}
-{{
-    fields.field(
+{{ fields.field(
         '',
         search_button,
         '',
